# remote-processing

./: ._compare-results.py  .gitignore  README.md  buildspec.yml  compare-results.py  template.yaml  test-samples.sh  test_binning.py
sherlock-runner/: Cargo.toml  Dockerfile  Dockerfile.build  binning_bridge.py  ransac_bridge.py
sherlock-runner/src/: dataset.rs  main.rs
sherlock-runner/src/sherlock/: calibrate.rs  centroid.rs  compare.rs  export.rs  find_filter.rs  fragments.rs  graph_clique.rs  isotope.rs  mod.rs  peaks_above_noise.rs  precursors.rs  progress.rs  ransac.rs  review.rs  run.rs  run_compare.rs  stripes.rs  subsample.rs  swim_group.rs
