[package]
name = "sherlock-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# Lambda runtime
lambda_runtime = "0.13"
tokio = { version = "1", features = ["full"] }

# AWS SDK
aws-sdk-s3 = "1"
aws-config = "1"

# Pipeline computation (same as 2discover)
ndarray = "0.16"
netcdf = "0.9"
rayon = "1.10"
rand = "0.8"
ordered-float = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
